2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Don't copy assembly references.

2007-05-08  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (GetMemberNamePosition): Fixed to
	support IIndexers.
	(FindParameterReference): Updated for API changes, no longer takes
	an IMethod argument.
	(Visit): Fixed up a bit since params can be parented by either an
	IMethod or an IIndexer.

2007-05-04  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (GetParameterNamePosition): Implemented.

	* Parser/Resolver.cs (GetMethod): Check if the cursor is within the
	declaration bounds as well, so that parameter searching works.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Test/Test.cs, Gui/ChooseRuntimePanel.cs, Gui/CodeGenerationPanel.cs,
	  CSharpBinding.addin.xml, CSharpBinding.mdp, Makefile.am: Migration
	  to Mono.Addins.

2007-05-03  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (GetMemberNamePosition): Fixed IEvent
	and IProperty logic and also greatly simplified the overall code.

2007-05-03  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (FindVariableNamePosition): New
	overloaded function to get the offset of a variable name.
	(FindVariableReferences): New.
	(FindParameterReferences): New.
	(Visit): Added logic for matching LocalVariable and IParameters.

2007-05-02  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (RenameClass): Rename all parts of the class
	(in case the class is a partial class).

2007-05-01  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (CreateReference): Trim the name to the
	base name (we don't want the FullyQualifiedName). Also do some
	fixing of the offset since the expression start offset begins
	before the name of the type (e.g. it includes
	public/private/etc modifiers).

2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Don't copy referenced assemblies.